fixed extra space under vevo thumbnail by forcing playlist-thumbnail-inner to 225px

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -515,6 +515,10 @@ div.footer {
 
 //playlist thumbnail
 
+.playlist-thumbnail > div.playlist-thumbnail-inner {
+  height: 225px;
+};
+
 
 #playlist-thumbnail-overlay {
   position: relative;
@@ -534,7 +538,6 @@ div.footer {
   font-size: 30px;
   text-align: center;
   position: absolute;
-  // color: #9A84AD;
   color: white;
   width: 400px;
   letter-spacing: 8px;
@@ -542,11 +545,7 @@ div.footer {
 
 #playlist-thumbnail-follow-button {
   position: absolute;
-  // width: 400px;
-  // right: 0px;
   float: right;
-  // display: inline;
-  // z-index: 10;
 };
 
 #playlist-thumbnail-link {
